Создали модель Блог и настроили вывод на странице /blog

--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,1 +1,8 @@
-Hello blog!
+Blog
+
+{% for blog in blogs %}
+<h2><a href=#>{{ blog.title }}</a></h2>
+<p>{{ blog.date }}<p>
+<p>{{ blog.description }}</p>
+
+{% endfor %}
