--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -2,7 +2,11 @@
 
 {% load static %}
 
+<a href="{% url 'blog:all_blogs' %}">Blog</a>
+<br>
+
 <a href="{% static 'portfolio/HTML-CSS.pdf' %}">Sert</a>
+<br>
 
 <img src="{% static 'portfolio/dead.png' %}">
 
