--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,3 +1,7 @@
+{% extends 'portfolio/base.html' %}
+
+{% block content %}
+
 <h1>Меня зовут Альберт и это моё портфолио</h1>
 
 {% load static %}
@@ -19,3 +23,5 @@
 {% endif %}
 
 {% endfor %}
+
+{% endblock %}
