--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -1,18 +1,25 @@
 {% extends 'portfolio/base.html' %}
 
+{% load static %}
+
 {% block content %}
 
-  Blog
+<h1 id="blogtitle" class="text-center font-weigth-bold">Blog</h1>
 
-  <h2>Albert has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h2>
+<h3 class="text-center mb-5">Albert has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h2>
 
   {% for blog in blogs %}
   <!-- Для каждого заголовка блога будет ссылка на его содержимое
    исп-я id -->
-  <a href="{% url 'blog:detail' blog.id %}"><h2>{{ blog.title }}</h2></a>
-  <p>{{ blog.date|date:'M d Y'|upper }}<p>
-  <p>{{ blog.description|striptags|truncatechars:100 }}</p>
-
-  {% endfor %}
+<div class="row justify-content-center my-3">
+  <div class="col-md-10">
+    <a href="{% url 'blog:detail' blog.id %}">
+      <h2>{{ blog.title }}</h2>
+    </a>
+    <h5 class="text-muted">{{ blog.date|date:'M d Y'|upper }}</h5>
+    <h4>{{ blog.description|striptags|truncatechars:100 }}</h4>
+  </div>
+</div>
+{% endfor %}
 
 {% endblock %}
