--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="{% static 'portfolio/resume.pdf' %}">Резюме</a>
+          <a class="nav-link" href="{% static 'portfolio/resume.pdf' %}">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.linkedin.com/in/альберт-галицинский-5567b9203/" target="_blank">LinkedIn</a>
