--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -52,7 +52,7 @@
       <!-- <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li> -->
-        <a href="{% url 'blog:all_blogs' %}"><button type="button" class="btn btn-success">Блог</button></a>
+        <a href="{% url 'blog:all_blogs' %}"><button type="button" class="btn btn-success">Blog</button></a>
       </ul>
     <!-- <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
